@@ -117,6 +117,14 @@ private:
         store::Iterator_t children,
         const QueryLoc& loc);
 
+  static void finishTextNode(
+    const static_context* sctx,
+    TypeManager* typeManager,
+    EventSchemaValidator& schemaValidator,
+    store::Item* parent,
+    zstring textNodeValue,
+    const QueryLoc& loc);
+
   static store::Item_t processElement(
         const static_context* sctx,
         TypeManager* typeManager, 
